syntax = "proto3";

option go_package = "github.com/tubagusmf/category-service/pb/category";

package category;

message CategoryRequest {
    string id = 1;
}

message Category {
    string id = 1;
    string name = 2;
    string created_at = 3;
    string updated_at = 4;
}

service CategoryService {
    rpc FindCategoryById(CategoryRequest) returns (Category);
}